fixed InteractiveTable to work on safari

--- a/frontend/src/components/Template/DataTable/InteractiveTable/InteractiveTable.css
+++ b/frontend/src/components/Template/DataTable/InteractiveTable/InteractiveTable.css
@@ -52,3 +52,28 @@
 .RoomRowDisplay:hover {
     box-shadow: 0px 0px 0px 3px rgb(111, 162, 239);
 }
+
+.ItRow > * {
+    background-color: rgba(0,0,0,0.1);
+    border: 3px solid transparent;
+    border-left: none;
+    border-right: none;
+    cursor: pointer;
+}
+
+.ItRow > *:last-child {
+    border-top-right-radius: 100px;
+    border-bottom-right-radius: 100px;
+    border-right: 3px solid transparent;
+}
+
+.ItRow > *:first-child {
+    border-top-left-radius: 100px;
+    border-bottom-left-radius: 100px;
+    border-left: 3px solid transparent;
+}
+
+.ItRow:hover > * {
+    /* box-shadow: 0px 0px 0px 3px rgb(111, 162, 239); */
+    border-color: rgb(111, 162, 239);
+}
